<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.capstone_project.ui.SearchActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/colorPrimary"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="9dp"
                android:contentDescription="@string/image"
                android:padding="2dp"
                app:srcCompat="@mipmap/search_icon" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="9dp"
                    android:layout_marginTop="9dp"
                    android:background="@color/cardview_dark_background"
                    android:hint="@string/search_articles"
                    android:textDirection="locale"
                    android:imeOptions="actionSearch|flagNavigatePrevious"
                    android:inputType="textNoSuggestions"
                    android:maxLines="1"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/deleteText"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignEnd="@+id/editText"
                    android:layout_alignTop="@+id/editText"
                    android:contentDescription="@string/image"
                    android:padding="5dp"
                    android:src="@mipmap/close"
                    android:visibility="invisible" />
            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/search_history"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/gray_alpha"
            android:clickable="true"
            android:elevation="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/clear_history"
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <ImageView
                    android:id="@+id/delete_history"
                    android:layout_width="48dp"
                    android:layout_height="match_parent"
                    android:background="@color/grey"
                    android:contentDescription="@string/image"
                    android:padding="8dp"
                    android:src="@mipmap/close_circle" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/grey"
                    android:paddingBottom="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:textDirection="locale"
                    android:paddingTop="10dp"
                    android:text="@string/clear_search_history"
                    android:textColor="@color/darker_gray"
                    android:textSize="16sp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/textBackground">

                <ListView
                    android:id="@+id/search_listView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/textBackground"
                    android:divider="@null"
                    android:dividerHeight="0dp"/>
            </FrameLayout>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/search_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>

    </FrameLayout>
</LinearLayout>
