<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/search"
        android:icon="@mipmap/search_icon"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/refresh"
        android:icon="@mipmap/refresh_icon"
        android:title="@string/refresh"
        app:showAsAction="always" />

</menu>